--- a/exercises/15-Network_Analysis.Rmd
+++ b/exercises/15-Network_Analysis.Rmd
@@ -28,7 +28,6 @@ p_load("tidyverse", "knitr", "readr",
        "pander", "BiocManager", 
        "dplyr", "stringr", 
        "statmod", # required dependency, need to load manually on some macOS versions.
-       "Glimma", # beautifies limma results
        "purrr", # for working with lists (beautify column names)
        "reactable") # for pretty tables.
 
@@ -48,21 +47,21 @@ p_load("igraph")
 
 ```
 
-## Description
+### Description
 
-Use limma to identify differential patterns of proteomic and
-transcriptomic changes in a time series heat shock experiment.
+Use WGCNA to identify modules identified in patterns of
+transcriptomic changes across samples spanning multiple genotypes and stress conditions. Through this exercise, we aim to gain practical insights into interpreting WGCNA outputs and leveraging this technique for a deeper understanding of genomic landscapes and network analysis.
 
 ## Learning Objectives
 
 At the end of this exercise, you should be able to:
 
--   Recognize the steps of DE analysis of Mass Spec data
--   Identify differentially Abundant proteins with limma
--   Better understand the temporal relationship between gene expression and protein abundance
+-   Understand the concept of co-expression modules.
+-   Interpret module colors and visualizations.
+-   Evaluate module preservation and critically analyze results.
 
 
-## Loading in the count data file
+### Loading in the count data file
 
 *We are downloading the expected raw counts from a
 Github repository using the code below. Just as in previous exercises,
@@ -78,7 +77,7 @@ counts <- read.delim('https://github.com/clstacy/GenomicDataAnalysis_Fa23/raw/ma
   )
 ```
 
-
+### Preprocessing raw count data
 ```{r tidy-wgcna}
 # tidy raw counts to visualize distributions
 tidy_counts <- counts %>%
@@ -105,8 +104,10 @@ p <- tidy_counts %>%
 )
 ```
 
-Let's use edgeR to normalize the raw counts
 
+### Data normalization
+
+Let's use edgeR to normalize the raw counts
 ```{r normalize-edgeR-wgcna}
 # read into a DGElist
 y <- edgeR::DGEList(counts,
@@ -155,6 +156,8 @@ p_normalized <- tidy_normalized_counts %>%
     ggtitle("Normalized CPM distribution")
 )
 ```
+
+## Variability-based subsetting of gene list
 
 For WGCNA, we don't want to correlate all of the genes because (1) computational limitation and (2) genes that vary a small amount increase the number of variables in the model, making it harder to be confident in the patterns we do see. One way to account for this is by subsetting our entire gene list. 
 
@@ -206,7 +209,8 @@ p_normalized_varGenes <- tidy_normalized_counts_variable_genes %>%
 )
 ```
 
-For the analyses we've done so far, we've needed the columns to correspond to samples and the rows to correspond to genes. WGCNA expects the opposite, where columns are genes and rows are samples. We can use the transpose function in r `t()` in order to convert our data. Let's do that now
+For the analyses we've done so far, we've needed the columns to correspond to samples and the rows to correspond to genes. WGCNA expects the opposite, where columns are genes and rows are samples. We can use the transpose function in r `t()` in order to convert our data. Let's do that now:
+
 ```{r tranpose-variable-genes-wgcna}
 # transpose our normalized count matrix and save to new object
 variable_genes_matrix = t(normalized_counts_variable_genes)
@@ -214,6 +218,8 @@ variable_genes_matrix = t(normalized_counts_variable_genes)
 # Look at first 5 rows and 10 columns
 variable_genes_matrix[1:5,1:10]           
 ```
+
+### WGCNA thresholding
 
 We can see now that the `rows = treatments` and `columns = gene probes`. We’re ready to start WGCNA. A correlation network would be a complete network (all genes would be connected to all other genes). Hence we need to pick a threshhold value (if correlation is below threshold, remove the edge). We assume the true biological network follows a scale-free structure (see papers by Albert Barabasi).
 
@@ -265,7 +271,9 @@ text(sft$fitIndices[, 1],
      cex = cex1, col = "red")
 ```
 
-Pick a soft threshold power near the curve of the plot. We’ll pick 12, but feel free to experiment with other powers to see how it affects your results. Now we can create the network using the `blockwiseModules` command. The `blockwiseModule` may take a while to run, since it is constructing the TOM (topological overlap matrix) and several other steps. While it runs, take a look at the b`lockwiseModule` documentation (link to [vignette][https://www.rdocumentation.org/packages/WGCNA/versions/1.69/topics/blockwiseModules]) for more information on the parameters. How might you change the parameters to get more or less modules?
+Pick a soft threshold power near the curve of the plot. We’ll pick 12, but feel free to experiment with other powers to see how it affects your results. Now we can create the network using the `blockwiseModules` command. The `blockwiseModule` may take a while to run, since it is constructing the TOM (topological overlap matrix) and several other steps. While it runs, take a look at the `blockwiseModule` documentation (link to [vignette][https://www.rdocumentation.org/packages/WGCNA/versions/1.69/topics/blockwiseModules]) for more information on the parameters. How might you change the parameters to get more or less modules?
+
+### Generate network
 
 ```{r}
 # NOTE: Be sure to run this entire chunk at once
@@ -325,46 +333,7 @@ modules_variable_genes_df <- data.frame(
 head(modules_variable_genes_df)
 ```
 
-
-```{r}
-# # pick out a few modules of interest here
-# modules_of_interest = c("turquoise", "blue", "brown", "grey")
-# 
-# # Pull out list of genes in that module
-# subset_modules_variable_genes_df = modules_variable_genes_df %>%
-#   subset(colors %in% modules_of_interest)
-# 
-# row.names(modules_variable_genes_df) = modules_variable_genes_df$gene_id
-# 
-# # Get normalized expression for those genes
-# subexpr = normalized_counts_variable_genes[subset_modules_variable_genes_df$gene_id,]
-# 
-# # convert to a data frame
-# subset_modules_variable_genes_df = data.frame(subexpr) %>%
-#   mutate(
-#     gene_id = row.names(.)
-#   ) %>%
-#   pivot_longer(-gene_id) %>%
-#   mutate(
-#     module = modules_variable_genes_df[gene_id,]$colors
-#   )
-# 
-# subset_modules_variable_genes_df %>% 
-#   ggplot(., aes(x=name, y=1+value, group=gene_id)) +
-#   geom_line(aes(color = module),
-#             alpha = 0.2) +
-#   theme_bw() +
-#   theme(
-#     axis.text.x = element_text(angle = 90)
-#   ) +
-#   facet_grid(rows = vars(module), 
-#              # scales = "free_y"
-#              ) +
-#   labs(x = "treatment",
-#        y = "normalized expression") +
-#   scale_color_identity() #+ 
-#   # scale_y_log10()
-```
+### Visualize Modules
 
 Plot gene expression correlations in a grid, based on genotype and module membership
 ```{r fig.height=12, fig.width=8}
@@ -404,7 +373,7 @@ Plot gene expression correlations in a grid, based on genotype and module member
 
 
 
-### heatmap comparing modules
+### Heatmap correlating modules
 
 Now, let's generate a heatmap of the relationship between the modules
 
@@ -441,46 +410,16 @@ mME %>% ggplot(., aes(x=treatment, y=name, fill=value)) +
 ```
 
 
-### Generate and Export Networks
+### Generate & Visualize Networks
 
-We can generate a network graph file for analysis in Cytoscape or as an edge/vertices file.
-
-
-i think this code chunk can be removed
-```{r}
-# # we could subset to only certain modules, if we want to.
-# genes_of_interest = modules_variable_genes_df #%>%
-#   # subset(colors %in% modules_of_interest)
-# 
-# # if we subset, this would only get genes in selected modules
-# expr_of_interest = normalized_counts_variable_genes[genes_of_interest$gene_id,]
-# 
-# # Only recalculate TOM for modules of interest (faster, altho there's some online discussion if this will be slightly off)
-# TOM = TOMsimilarityFromExpr(t(expr_of_interest),
-#                             power = picked_power)
-# 
-# # Add gene names to row and columns
-# row.names(TOM) = row.names(expr_of_interest)
-# colnames(TOM) = row.names(expr_of_interest)
-# 
-# edge_list_var_genes = data.frame(TOM) %>%
-#   mutate(
-#     gene1 = row.names(.)
-#   ) %>%
-#   pivot_longer(-gene1) %>%
-#   dplyr::rename(gene2 = name, correlation = value) %>%
-#   unique() %>%
-#   subset(!(gene1==gene2))
-# 
-# head(edge_list_var_genes)
-```
+We can generate a network graph file for analysis in Cytoscape, or as an edge/vertices file.
 
 ```{r fig.height=12, fig.width=12}
 # correlation cutoff
 corr_cutoff = 0.3
 
 # first, create adjacency matrix
-adjacency = adjacency(variable_genes_matrix, power=12, type="signed")
+adjacency = adjacency(variable_genes_matrix, power=picked_power, type="signed")
 
 # Calculate topological overlap matrix and dissimilarity from adjacency matrix
 TOM = TOMsimilarity(adjacency, TOMType="signed")
@@ -514,7 +453,7 @@ network_graph_data <- simplify(network_graph_data)
 V(network_graph_data)$color <- variable_genes_network$colors
 
 # set plotting margins
-par(mar=c(0,0,0,0))
+par(mar=c(0,0,0.5,0))
 # remove unconnected nodes
 network_graph_data <- delete.vertices(network_graph_data,
                                       degree(network_graph_data)==0)
@@ -528,9 +467,28 @@ plot(network_graph_data,
      main = "Network plot for most variable genes")
 ```
 
-### Let's add GO enrichments to the module pattern graph
+
+### Save network for analysis in cytoscape
+```{r}
+# choose where to save files
+dir_cytoscape_files <- path.expand("~/Desktop/Genomic_Data_Analysis/Analysis/Network/WGCNA")
+
+#create that directory if it doesn't exist
+if (!dir.exists(dir_cytoscape_files)) {dir.create(dir_cytoscape_files, recursive = TRUE)}
+
+# save files for loading into Cytoscape
+exportNetworkToCytoscape(
+  adjMat = adjacency,
+  edgeFile = paste0(dir_cytoscape_files,"variable_gene_network_edges.tsv"),
+  nodeFile = paste0(dir_cytoscape_files,"variable_gene_network_nodes.tsv"),
+  threshold=0.3,
+  nodeAttr = modules_variable_genes_df$colors
+)
+```
 
 ### GO enrichments
+
+Let's add GO enrichments to the module pattern graph, so we can make sense of what genes are composing each module.
 ```{r fig.height=18, fig.width=8}
 # create list of genes in each one
 variable_geneIDs_module_list <- normalized_counts_variable_genes %>%
@@ -594,7 +552,7 @@ GO_enrich_variable_gene_modules %>%
             axis.text.x = element_text(angle = 90,hjust=0) )
 ```
 
-
+This next code chunk adds those GO terms alongside the module expression graph.
 ```{r fig.height=12, fig.width=8}
 # here are the data to add to cowplot:
 GO_summaries_variable_genes <- GO_enrich_variable_gene_modules %>%
@@ -653,22 +611,14 @@ counts_DE <- counts %>%
   dplyr::filter(ORF %in% DE_genes) %>%
   column_to_rownames("ORF")
 
-# read into a DGElist
-y_DE <- edgeR::DGEList(counts_DE,
-                    group=as.factor(
-                      # remove replicate from name
-                      sub("_[^_]+$", "", colnames(counts_DE))
-                    ),
-                    genes = rownames(counts_DE)
-                    )
-
-# filter low counts (note none are filtered here)
-keep_DE <- rowSums(cpm(y_DE) > 1) >= 4
-y_DE <- y_DE[keep_DE,]
-
-# normalize with cpm
-normalized_counts_DE_genes <- cpm(y_DE,
-                         log = TRUE)
+# normalize with cpm, filter to just DE genes
+normalized_counts_DE_genes <- cpm(y,
+                         log = TRUE) %>%
+  data.frame() %>%
+  rownames_to_column("ORF") %>%
+  dplyr::filter(ORF %in% DE_genes) %>%
+  column_to_rownames("ORF") %>%
+  as.matrix()
 
 
 DE_genes_matrix = t(normalized_counts_DE_genes)
@@ -715,7 +665,7 @@ text(sft$fitIndices[, 1],
      labels = powers,
      cex = cex1, col = "red")
 ```
-It looks like a higher power would better fit this data. Let's try with 12. You can try changing to 18 and see how the results change.
+It looks like a higher power would better fit this data. Let's try with 12. You can try changing to a different threshold and see how the results change.
 
 ```{r}
 picked_power = 12
@@ -896,7 +846,7 @@ Let's create the network based on these DE genes
 
 ```{r fig.height=12, fig.width=12}
 # correlation cutoff
-corr_cutoff = 0.4
+corr_cutoff = 0.3
 
 # first, create adjacency matrix
 adjacency_DE = adjacency(DE_genes_matrix, power=picked_power, type="signed")
@@ -932,15 +882,17 @@ network_graph_data_DE <- simplify(network_graph_data_DE)
 # add colors for the network graph from constructed network modules
 V(network_graph_data_DE)$color <- DE_genes_network$colors
 
-# set plotting margins
-par(mar=c(0,0,0,0))
+
 # remove unconnected nodes
 network_graph_data_DE <- delete.vertices(network_graph_data_DE,
                                       degree(network_graph_data_DE)==0)
 
+# set plotting margins
+par(mar=c(0.5,0.5,0.5,0.5))
+
 # generate plot
 plot(network_graph_data_DE, 
-     layout=layout.fruchterman.reingold(network_graph_data_DE, niter=5000),
+     layout=layout.fruchterman.reingold(network_graph_data_DE, niter=1000),
      vertex.size=3, edge.arrow.size=0.1, 
      vertex.label.cex = 0.01,  # increase this value to see gene names
      vertex.label.color= "black", rescale=TRUE, ylim=c(-1,1),xlim=c(-1,1),
@@ -1036,20 +988,40 @@ cowplot::ggdraw(DE_genes_plot +
                      x = 0.76,  # Adjust this value for the desired horizontal position
                      y = rev(seq(0.05, 0.82, length.out = length(GO_summaries_DE_genes))),  # Adjust this sequence for the desired vertical positions
                      size = 6, 
-                     hjust = 0,  # Align to the left
+                     hjust = 0,  # Align GO terms to the left
                      vjust = 0.5)
 ```
 
 
-## Saving Graphs for Cytoscape
+## Saving network for Cytoscape
 
 ```{r}
+# choose where to save files
+dir_cytoscape_files <- path.expand("~/Desktop/Genomic_Data_Analysis/Analysis/Network/WGCNA")
 
+#create that directory if it doesn't exist
+if (!dir.exists(dir_cytoscape_files)) {dir.create(dir_cytoscape_files, recursive = TRUE)}
+
+# save files for loading into Cytoscape
+exportNetworkToCytoscape(
+  adjMat = adjacency_DE,
+  edgeFile = paste0(dir_cytoscape_files,"DE_gene_network_edges.tsv"),
+  nodeFile = paste0(dir_cytoscape_files,"DE_gene_network_nodes.tsv"),
+  threshold=0.3,
+  nodeAttr = modules_DE_genes_df$colors
+)
+```
 ```
 
 ## Questions
 
-Question 1: 
+Question 1: How would you explain the concept of a "module" in the context of WGCNA to someone unfamiliar with genomics?
+
+Question 2: Why is the choice of soft power important in WGCNA, and how might it impact the results?
+
+Question 3: How can the information obtained from WGCNA be integrated with other omics data for a more comprehensive biological interpretation?
+
+Question 4: What does module preservation in WGCNA mean, and how to the two models generated with DE vs highly variable genes compare?
 
 Be sure to knit this file into a pdf or html file once you're finished.
 
